--- a/READ/User/templates/User/register.html
+++ b/READ/User/templates/User/register.html
@@ -4,6 +4,7 @@
       <!--  Loads the path to static files -->
     {% load static %}
     <link rel="stylesheet" type="text/css"  href="{% static 'index/home.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'User/register.css' %}">
      <link rel="stylesheet" type="text/css"  href="{% static 'index/fonts/style.css' %}">
      <link rel="stylesheet" type="text/css"  href="{% static 'index/bootstrap.min.css' %}">
      <script src="{% static 'index/typed.js' %}"></script>
@@ -19,9 +20,10 @@
 
 
 </head>
-<body>
 
- <div class="site-wrap" id="home-section">
+<body style="background-color:#fff6da;">
+
+ <div class="site-wrap" id="home-section" >
       <header class="site-navbar site-navbar-target" role="banner">
 
         <div class="container">
@@ -55,64 +57,17 @@
 
       </header>
 
-       <div class="container">
+       <div class="container mid">
               <div class="row align-items-center justify-content-center">
                  <div class="col-lg-8">
 
                  <h2>Sign up for a free account</h2>
                 <p class="lead">Select below the type of account you want to create</p>
-                <a  class="btn btn-student btn-lg" role="button">I'm a student</a>
-                <a class="btn btn-teacher btn-lg" role="button">I'm a teacher</a>
+                <a class="btn  btn-lg btn-style" role="button">I'm a student</a>
+                <a class="btn btn-lg btn-style" role="button">I'm a teacher</a>
             </div>
           </div>
        </div>
-
-         <div class="footer site-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="site-logo-footer">
-              <a href="index.html">READ</a>
-            </div>
-          </div>
-          <div class="col-md-8 ml-auto">
-            <div class="row">
-              <div class="col-md-4 ml-auto">
-                <ul class="list-unstyled links">
-                  <li><a href="#">Contact Us</a></li>
-                  <li><a href="#">hello@mydomain.com</a></li>
-
-                </ul>
-              </div>
-              <div class="col-md-4">
-                <ul class="list-unstyled links">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Sign In</a></li>
-                  <li><a href="#">Sign Up</a></li>
-                </ul>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="site-section">
-      <div class="container">
-        <div class="row mb-4 text-center">
-          <div class="col">
-            <a href="#"><span class="m-2 fa fa-facebook fa-3x"></span></a>
-            <a href="#"><span class="m-2 fa fa-twitter fa-3x"></span></a>
-            <a href="#"><span class="m-2 fa fa-linkedin fa-3x"></span></a>
-
-
-          </div>
-        </div>
-
-      </div>
-    </div>
-
 
 
     </div>
