--- a/web_app/mysite/read/templates/read/teacher/teacher_specific_class.html
+++ b/web_app/mysite/read/templates/read/teacher/teacher_specific_class.html
@@ -1,7 +1,6 @@
 {% extends "./teacher_base.html" %}
 {% block content %}
     <h1>Class: {{ class.name }}</h1>
-    {% comment %}<form action="{% url 'teacher_specific_class_view' %}">{% endcomment %}
     <table>
         <th>Enrolled Students</th>
         {% for student in enrolled_students %}
@@ -15,7 +14,35 @@
             </tr>
         {% endfor %}
     </table>
-    {% comment %}</form>{% endcomment %}
+    <br><br>
+    <form action="{% url 'teacher_specific_class_view' class.name %}" method="post">
+        {% csrf_token %}
+        <table>
+            <th>Document Name</th>
+            {% if uploaded_documents %}
+                <th>Upload Date</th>
+            {% endif %}
+            {% for document in uploaded_documents %}
+            <tr>
+                <td>{{ document.name }}</td>
+                <td>{{ document.upload_date }}</td>
+                <td>
+                    <input type="hidden" name="name" value="{{ document.name }}">
+                    <input type="submit" name="action" value="Delete">
+                </td>
+            </tr>
+            {% empty %}
+                <tr>
+                    <td>No documents uploaded to this class</td>
+                </tr>
+            {% endfor %}
+            <tr>
+                <td>
+                    <input type="submit" name="action" value="Add document">
+                </td>
+            </tr>
+        </table>
+    </form>
 
 {% endblock %}
 
