--- a/READ/home/templates/home/student/student_base.html
+++ b/READ/home/templates/home/student/student_base.html
@@ -5,7 +5,7 @@
     <title></title>
 
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'read/student_base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'home/student_base.css' %}">
 
 </head>
 <body>
