--- a/READ/home/templates/home/student/student_classes.html
+++ b/READ/home/templates/home/student/student_classes.html
@@ -1,4 +1,27 @@
 {% extends "./student_base.html" %}
 {% block content %}
     <h1>Student classes</h1>
+
+     {% if classes %}
+    <ul>
+        <table>
+            <th>Name</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            {% for class in classes %}
+                <tr>
+                    <td>{{ class.name }}</td> <td>{{ class.start_date }}</td><td>{{ class.end_date }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </ul>
+    {% else %}
+        <p>You have no classes</p>
+    {% endif %}
+
+  <form action="{% url 'student_classes_view' %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="join_class" value='1'>
+        <input type="submit" value="Join class">
+    </form>
 {% endblock %}
