--- a/READ/home/templates/home/teacher/teacher_classes.html
+++ b/READ/home/templates/home/teacher/teacher_classes.html
@@ -1,22 +1,26 @@
 {% extends "./teacher_base.html" %}
 {% block content %}
+{% load my_index_filter %}
     <h1>Your Classes</h1>
-    {% if classes %}
-    <ul>
         <table>
             <th>Name</th>
             <th>Start Date</th>
             <th>End Date</th>
+            <th>Pending Requests</th>
             {% for class in classes %}
+               <tr>
+                    <td><a href="{% url 'teacher_specific_class_view' class.name %}">{{ class.name }}</a></td>
+                    <td>{{ class.start_date }}</td>
+                    <td>{{ class.end_date }}</td>
+                    <td>{{ pending_requests|index:forloop.counter0 }}</td>
+               </tr>
+               {% empty %}
                 <tr>
-                    <td>{{ class.name }}</td> <td>{{ class.start_date }}</td><td>{{ class.end_date }}</td>
+                     <td>No Classes</td>
                 </tr>
             {% endfor %}
         </table>
-    </ul>
-    {% else %}
-        <p>You have no classes</p>
-    {% endif %}
+
     <form action="{% url 'teacher_classes_view' %}" method="post">
         {% csrf_token %}
         <input type="hidden" name="add_class" value='1'>
