--- a/READ/home/templates/home/teacher/teacher_classes.html
+++ b/READ/home/templates/home/teacher/teacher_classes.html
@@ -6,12 +6,15 @@
             <th>Name</th>
             <th>Start Date</th>
             <th>End Date</th>
+            <th>Code</th>
             <th>Pending Requests</th>
+
             {% for class in classes %}
                <tr>
                     <td><a href="{% url 'teacher_specific_class_view' class.name %}">{{ class.name }}</a></td>
                     <td>{{ class.start_date }}</td>
                     <td>{{ class.end_date }}</td>
+                    <td>{{ class.code }}</td>
                     <td>{{ pending_requests|index:forloop.counter0 }}</td>
                </tr>
                {% empty %}
