--- a/READ/home/templates/home/student/student_classes.html
+++ b/READ/home/templates/home/student/student_classes.html
@@ -1,9 +1,24 @@
 {% extends "./student_base.html" %}
 {% block content %}
     <h1>Student classes</h1>
+        <table>
+            <th>Name</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            {% for temp in temp %}
+               <tr>
+                    <td><a href="">{{ temp.name }}</a></td>
+                    <td>{{ temp.start_date }}</td>
+                    <td>{{ temp.end_date }}</td>
+               </tr>
+               {% empty %}
+                <tr>
+                     <td>No Classes</td>
+                </tr>
+            {% endfor %}
+        </table>
 
-     {% if classes %}
-    <ul>
+  <!--   {% if classes %}
         <table>
             <th>Name</th>
             <th>Start Date</th>
@@ -14,11 +29,10 @@
                 </tr>
             {% endfor %}
         </table>
-    </ul>
     {% else %}
         <p>You have no classes</p>
     {% endif %}
-
+-->
   <form action="{% url 'student_classes_view' %}" method="post">
         {% csrf_token %}
         <input type="hidden" name="join_class" value='1'>
