--- a/READ/home/templates/home/student/student_joins_classroom.html
+++ b/READ/home/templates/home/student/student_joins_classroom.html
@@ -4,7 +4,7 @@
     <form action="{% url 'student_joins_classroom_view' %}" method="post">
         {% csrf_token %}
 
-        <input type="text" name="code" value="code">
+        <input type="text" name="code" value="">
         <input type="submit" value="Submit">
     </form>
 {% endblock %}
