--- a/web_app/mysite/read/static/read/login.css
+++ b/web_app/mysite/read/static/read/login.css
@@ -11,12 +11,6 @@ body{
 	}
 }
 
-.topnav{
-
- font-size: 60px;
-
-
-}
 
 .wrapper{
 	background: #50a3a2;
@@ -29,7 +23,8 @@ background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
 	top: 50%;
 	left: 0;
 	width: 100%;
-	height: 450px;
+	/*height: 450px;  */
+	height: 100%;
 	margin-top: -200px;
 	overflow: hidden;
 }
@@ -37,7 +32,7 @@ background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
 .container{
 	max-width: 600px;
 	margin: 0 auto;
-	padding: 80px 0;
+	padding: 40px 0;
 	height: 400px;
 	text-align: center;
 
