--- a/web_app/mysite/read/templates/read/login.html
+++ b/web_app/mysite/read/templates/read/login.html
@@ -6,10 +6,16 @@
 
      {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'read/login.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'read/login.js' %}">
 
+       <!-- adding google client ID-->
+    <meta name="google-signin-client_id" content="349071812334-ecouin9da5p9e3b81c9qfjqhfc7pgk1t.apps.googleusercontent.com">
+    <!-- Loading Google Platform Library -->
+     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
-<div>
+
+<div >
     <h1 style="color: #006666">R E A D</h1>
 </div>
 
@@ -32,6 +38,7 @@
     </form>
     <br>
 
+    <div class="g-signin2" data-onsuccess="onSignIn" ></div>
     <h4>Don't have an account?<a href="{% url 'register_view' %}">Register</a> here! </h4>
   </div>
 </div>
