--- a/web_app/mysite/read/templates/read/register.html
+++ b/web_app/mysite/read/templates/read/register.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>READ-Register</title>
+
+
 </head>
 <body>
+
+<div >
+    <h1 style="color: #006666">R E A D</h1>
+</div>
+<div class="wrapper">
+ <div class="container">
     <h1>Register</h1>
     <form action="{% url 'register_view' %}" method="post">
         {% csrf_token %}
@@ -15,6 +23,8 @@
         {% endfor %}
         <input type="submit" value="Submit">
     </form>
+ </div>
+</div>
 </body>
 </html>
 
