--- a/web_app/mysite/read/templates/read/student/student_base.html
+++ b/web_app/mysite/read/templates/read/student/student_base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>READ</title>
 
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'read/student_base.css' %}">
